--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -21,14 +21,19 @@ jobs:
       uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
     - name: prepare
       run: |
-        python3 -m pip install --upgrade pip build
-        pip install --upgrade setuptools
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-    - name: lint (flake8)
+        python3 -m pip install --upgrade pip
+        pip install .[dev]
+    - name: linter (flake8)
       run: flake8
-      shell: bash
     - name: build
       run: python3 -m build --sdist --wheel
+    - name: install
+      run: python3 -m pip install --user dist/*.whl
+    - name: test (installed)
+      run: |
+        pysymbolcheck --help
+        tar -tvf dist/pysymbolcheck-*.tar.gz | grep LICENSE
+        tar -tvf dist/pysymbolcheck-*.tar.gz | grep README.md
